# python-challange

./: .gitignore  README.md  devbox.json  pyproject.toml
.codesandbox/: tasks.json
app/: db.py  main.py  models.py
app/middleware/: role.py  tenant.py
app/routes/: users.py
tests/: conftest.py  test_users.py
